...
  <string name="add">Add</string>
  <string name="add_folder">Add folder</string>
  <string name="add_item">Add Item</string>
  <string name="an_error_has_occurred">An error has occurred.</string>
  <string name="back">Back</string>
  <string name="bitwarden">Bitwarden</string>
  <string name="cancel">Cancel</string>
  <string name="copy">Copy</string>
  <string name="copy_password">Copy password</string>
  <string name="copy_username">Copy username</string>
  <string name="credits">Credits</string>
  <string name="delete">Delete</string>
  <string name="deleting">Deleting...</string>
  <string name="do_you_really_want_to_delete">Do you really want to delete? This cannot be undone.</string>
  <string name="edit">Edit</string>
  <string name="edit_folder">Edit folder</string>
  <string name="email">Email</string>
  <string name="email_address">Email address</string>
  <string name="email_us">Email us</string>
  <string name="email_us_description">Email us directly to get help or leave feedback.</string>
  <string name="enter_pin">Enter your PIN code</string>
...
  <string name="help_and_feedback">Help and feedback</string>
  <string name="hide">Hide</string>
  <string name="internet_connection_required_message">Please connect to the internet before continuing.</string>
  <string name="internet_connection_required_title">Internet connection required</string>
  <string name="invalid_master_password">Invalid master password. Try again.</string>
  <string name="invalid_pin">Invalid PIN. Try again.</string>
  <string name="launch">Launch</string>
  <string name="log_in_verb">Log in</string>
  <string name="log_in_noun">Login</string>
  <string name="log_out">Log out</string>
  <string name="logout_confirmation">Are you sure you want to log out?</string>
  <string name="remove_account">Remove account</string>
  <string name="remove_account_confirmation">Are you sure you want to remove this account?</string>
...
  <string name="validation_field_required">The %1$s field is required.</string>
  <string name="value_has_been_copied">%1$s copied</string>
  <string name="verify_fingerprint">Verify fingerprint</string>
  <string name="verify_master_password">Verify master password</string>
  <string name="verify_pin">Verify PIN</string>
  <string name="version">Version</string>
  <string name="view">View</string>
  <string name="visit_our_website">Visit our website</string>
  <string name="website">Website</string>
  <string name="yes">Yes</string>
  <string name="account">Account</string>
  <string name="account_created">Your new account has been created! You may now log in.</string>
  <string name="account_created_success">Your new account has been created!</string>
...
  <string name="new_text_send">New text Send</string>
  <string name="new_file_send">New file Send</string>
  <string name="no_username">No Username</string>
  <string name="no_username_password_configured">This login does not have a username or password configured.</string>
  <string name="ok_got_it">Ok, got it!</string>
  <string name="option_defaults">Option defaults are set from the main Bitwarden app\'s password generator tool.</string>
  <string name="options">Options</string>
  <string name="other">Other</string>
  <string name="password_generated">Password generated</string>
  <string name="password_generator">Password generator</string>
  <string name="password_hint">Password hint</string>
  <string name="password_hint_alert">We\'ve sent you an email with your master password hint.</string>
  <string name="password_override_alert">Are you sure you want to overwrite the current password?</string>
...
  <string name="disabled">Disabled</string>
  <string name="enabled">Enabled</string>
  <string name="off" tools:override="true">Off</string>
  <string name="on" tools:override="true">On</string>
  <string name="status">Status</string>
  <string name="bitwarden_autofill_service_alert2">The easiest way to add new logins to your vault is from the Bitwarden Autofill Service. Learn more about using the Bitwarden Autofill Service by navigating to the \"Settings\" screen.</string>
  <string name="autofill">Autofill</string>
  <string name="autofill_or_view">Do you want to autofill or view this item?</string>
  <string name="bitwarden_autofill_service_match_confirm">Are you sure you want to autofill this item? It is not a complete match for \"%1$s\".</string>
  <string name="matching_items">Matching items</string>
  <string name="possible_matching_items">Possible matching items</string>
  <string name="search">Search</string>
  <string name="bitwarden_autofill_service_search">You are searching for an autofill item for \"%1$s\".</string>
  <string name="learn_org">Learn about organizations</string>
...
  <string name="host">Host</string>
  <string name="reg_ex">Regular expression</string>
  <string name="starts_with">Starts with</string>
  <string name="uri_match_detection">URI match detection</string>
  <string name="match_detection">Match detection</string>
  <string name="yes_and_save">Yes, and save</string>
  <string name="autofill_and_save">Autofill and save</string>
  <string name="organization">Organization</string>
  <string name="hold_yubikey_near_top">Hold your Yubikey near the top of the device.</string>
  <string name="try_again">Try again</string>
  <string name="yubi_key_instruction_ios">To continue, hold your YubiKey NEO against the back of the device.</string>
  <string name="bitwarden_autofill_accessibility_service_description2">The accessibility service may be helpful to use when apps do not support the standard autofill service.</string>
  <string name="date_password_updated">Password updated</string>
...
